--- a/HTML and CSS Basics/index.html
+++ b/HTML and CSS Basics/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <h2>dkjflkj</h2>
+    <nav>
+    <ul>
+        <li>
+            <a href="">Home</a>
+        </li>
+        <li>
+            <a href="">About</a>
+        </li>
+        <li>
+            <a href="">Contact</a>
+        </li>
+        <li>
+            <a href="">Projects</a>
+        </li>
+    </ul>
+    </nav>
+
+    <header>
+        <h1>Tanmay Bonde</h1>
+        <h2>Welcome to my Portfolio</h2>
+        <a href="">Learn More</a>
+
+        <section>
+            <img src="https://images.unsplash.com/flagged/photo-1595514191830-3e96a518989b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" width="200px">
+        </section>
+    </header>
+
+    <section>
+        <h1>Follow me on Social media</h1>
+        <ol>
+            <li>
+                <a href="instagram.com">Insta</a>
+            </li>
+            <li>
+                <a href="youtube.com">Youtube</a>
+            </li>
+            <li>
+                <a href="github.com">git</a>
+            </li>
+        </ol>
+    </section>
 </body>
 </html>
