--- a/1st Landing Page - HTML , CSS/index.html
+++ b/1st Landing Page - HTML , CSS/index.html
@@ -10,17 +10,25 @@
     <div id="main">
         <img src="https://images.unsplash.com/photo-1529139574466-a303027c1d8b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
 
+        <h1 id="text">We're content creation team and we're going to make some cool stuff for your </h1>
         <div id="scroll-div">
             <h1>Brand</h1>
             <h1>Brand</h1>
             <h1>Brand</h1>
+            <h1>Brand</h1>
+            <h1>Brand</h1>
+        
         </div>
         <div id="scroll-div2">
             <h1>Brand</h1>
             <h1>Brand</h1>
             <h1>Brand</h1>
+            <h1>Brand</h1>
+            <h1>Brand</h1>
         </div>
         <div id="scroll-div3">
+            <h1>Brand</h1>
+            <h1>Brand</h1>
             <h1>Brand</h1>
             <h1>Brand</h1>
             <h1>Brand</h1>
