--- a/2nd Landing Page/index.html
+++ b/2nd Landing Page/index.html
@@ -19,9 +19,20 @@
           <h4>Career</h4>
           <h4>Blog</h4>
           <h4>Account</h4>
+          <button class="button">Sign-in</button>
           <i class="ri-menu-3-line"></i>
         </div>
       </nav>
+      <div class="content">
+        <div class="left">
+            <h1>Learn from the <span>coolest</span> coding platform of India.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum minima ea omnis eveniet! Quis reiciendis laudantium tempore? Esse, qui fuga.</p>
+            <button class="button">Explore Now</button>
+        </div>
+        <div class="right">
+            <img src="./Coding.jpg" alt="">
+        </div>
+      </div>
     </div>
   </body>
 </html>
