Added Button hover

--- a/2nd Landing Page/index.html
+++ b/2nd Landing Page/index.html
@@ -19,7 +19,7 @@
           <h4>Career</h4>
           <h4>Blog</h4>
           <h4>Account</h4>
-          <button class="button">Sign-in</button>
+          <button class="all-button">Sign-in</button>
           <i class="ri-menu-3-line"></i>
         </div>
       </nav>
@@ -27,7 +27,7 @@
         <div class="left">
             <h1>Learn from the <span>coolest</span> coding platform of India.</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum minima ea omnis eveniet! Quis reiciendis laudantium tempore? Esse, qui fuga.</p>
-            <button class="button">Explore Now</button>
+            <button class="all-button">Explore Now</button>
         </div>
         <div class="right">
             <img src="./Coding.jpg" alt="">
