our story section done

--- a/3rd Coffee Landing Page/index.html
+++ b/3rd Coffee Landing Page/index.html
@@ -26,12 +26,10 @@
 
     <section id="our-story">
       <div class="img-container">
-        <div class="ing">
-          <div class="img"></div>
-        </div>
+        <div class="img"></div>
       </div>
 
-      <div class="section-container">
+      <div class="section-content">
         <div class="title-style">
           <span class="line"></span>
           <h1 class="title">Our Story</h1>
@@ -42,6 +40,7 @@
           dolore soluta, corrupti voluptates corporis suscipit doloribus nulla
           delectus asperiores facilis quam.
         </p>
+        <button>Learn More</button>
       </div>
     </section>
   </body>
