--- a/2nd Landing Page/index.html
+++ b/2nd Landing Page/index.html
@@ -19,7 +19,8 @@
           <h4>Career</h4>
           <h4>Blog</h4>
           <h4>Account</h4>
-          <button class="all-button">Sign-in</button>
+          <button class="all-button" id="log-in">Log-in</button>
+          <button class="all-button">Sign-up</button>
           <i class="ri-menu-3-line"></i>
         </div>
       </nav>
