--- a/Amazon clone/index.html
+++ b/Amazon clone/index.html
@@ -32,9 +32,19 @@
                 </div>
             </div>
 
-            <div class="nav-signin">
+            <div class="nav-signin border">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-second">Account & Lists</p>
+            </div>
+
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p>Cart</p>
             </div>
         </div>
     </header>
