--- a/Amazon clone/index.html
+++ b/Amazon clone/index.html
@@ -47,6 +47,90 @@
                 <p>Cart</p>
             </div>
         </div>
+
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+
+            <div class="panel-ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Card</p>
+                <p>Sell</p>
+            </div>
+
+            <div class="panel-deals">
+                <p>Shop deals in Electronic</p>
+            </div>
+        </div>
     </header>
+
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="">Click here to go amazon.in</a></p>
+        </div>
+    </div>
+
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Clothes</h2>
+                <div class="box-img" style="background-image: url('Assets/box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url('Assets/box2_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+                <div class="box-img" style="background-image: url('Assets/box3_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Electronics</h2>
+                <div class="box-img" style="background-image: url('Assets/box4_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Makeup</h2>
+                <div class="box-img" style="background-image: url('Assets/box5_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Pet Care</h2>
+                <div class="box-img" style="background-image: url('Assets/box6_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Toy's</h2>
+                <div class="box-img" style="background-image: url('Assets/box7_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Fasion</h2>
+                <div class="box-img" style="background-image: url('Assets/box8_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
