--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -8,6 +8,48 @@
 </head>
 <body>
     
+    <div class="top-banner">
+        <div class="container">
+            <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
+        </div>
+    </div>
+
+    <nav>
+        <div class="container main-nav flex">
+            <a href="#" class="company-logo">
+                <img src="assets/asset 1.png" alt="company logo">
+            </a>
+
+            <div class="nav-links">
+                <ul class="flex">
+                    <li><a href="#" class="hover-links">Products</a></li>
+                    <li><a href="#" class="hover-links">Customer</a></li>
+                    <li><a href="#" class="hover-links">Pricing</a></li>
+                    <li><a href="#" class="hover-links">Resources</a></li>
+                    <li><a href="#" class="hover-links secondary-button">Sign in</a></li>
+                    <li><a href="#" class="hover-links primary-button">Sign up</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header></header>
+
+    <section class="companies-section"></section>
+
+    <section class="features-section"></section>
+
+    <section class="big-features-section"></section>
+    <section class="big-features-section"></section>
+    <section class="big-features-section"></section>
+
+    <section class="example-section"></section>
+
+    <section class="cta-section"></section>
+
+    <footer></footer>
+
+    <div class="sub-footer"></div>
 
     <script src="https://kit.fontawesome.com/fbc44e03f7.js" crossorigin="anonymous"></script>
 </body>
