Header section done

--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     
+    <!-- Top banner -->
     <div class="top-banner">
         <div class="container">
             <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
         </div>
     </div>
+
+    <!-- navbar -->
 
     <nav>
         <div class="container main-nav flex">
@@ -32,10 +35,38 @@
             </div>
         </div>
     </nav>
+    <!-- header seciton -->
+    <header>
+        <div class="container header-section flex">
+            <div class="header-left">
+                <h1>Design Confidentaly</h1>
+                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
+                <a href="#" class="primary-button">Get Started</a>
+            </div>
 
-    <header></header>
+            <div class="header-right">
+                <img src="assets/asset 2.png" alt="">
+            </div>
+        </div>
+    </header>
 
-    <section class="companies-section"></section>
+    <section class="companies-section">
+       <div class="container">
+        <div class="small-bold-text companies-header">
+            The world’s best companies rely on UsabilityHub to make better design decisions.
+        </div>
+
+        <div class="logos flex">
+            <img src="assets/asset 3.png" alt="" class="logo">
+            <img src="assets/asset 4.png" alt="" class="logo">
+            <img src="assets/asset 5.png" alt="" class="logo">
+            <img src="assets/asset 6.png" alt="" class="logo">
+            <img src="assets/asset 7.png" alt="" class="logo">
+            <img src="assets/asset 8.svg" alt="" class="logo">
+            <img src="assets/asset 9.png" alt="" class="logo">
+        </div>
+       </div>
+    </section>
 
     <section class="features-section"></section>
 
