--- a/Amazon clone/index.html
+++ b/Amazon clone/index.html
@@ -68,13 +68,13 @@
         </div>
     </header>
 
-    <div class="hero-section">
+    <div class="hero-section flex">
         <div class="hero-msg">
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="">Click here to go amazon.in</a></p>
         </div>
     </div>
 
-    <div class="shop-section">
+    <div class="shop-section flex">
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes</h2>
