--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -1,74 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Complete Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Top banner -->
     <div class="top-banner">
-        <div class="container">
-            <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
+      <div class="container">
+        <div class="small-bold-text banner-text">
+          🥳 New to Usability Hub: Open and Closed card sorting
         </div>
+      </div>
     </div>
 
     <!-- navbar -->
 
     <nav>
-        <div class="container main-nav flex">
-            <a href="#" class="company-logo">
-                <img src="assets/asset 1.png" alt="company logo">
-            </a>
+      <div class="container main-nav flex">
+        <a href="#" class="company-logo">
+          <img src="assets/asset 1.png" alt="company logo" />
+        </a>
 
-            <div class="nav-links">
-                <ul class="flex">
-                    <li><a href="#" class="hover-links">Products</a></li>
-                    <li><a href="#" class="hover-links">Customer</a></li>
-                    <li><a href="#" class="hover-links">Pricing</a></li>
-                    <li><a href="#" class="hover-links">Resources</a></li>
-                    <li><a href="#" class="hover-links secondary-button">Sign in</a></li>
-                    <li><a href="#" class="hover-links primary-button">Sign up</a></li>
-                </ul>
-            </div>
+        <div class="nav-links">
+          <ul class="flex">
+            <li><a href="#" class="hover-links">Products</a></li>
+            <li><a href="#" class="hover-links">Customer</a></li>
+            <li><a href="#" class="hover-links">Pricing</a></li>
+            <li><a href="#" class="hover-links">Resources</a></li>
+            <li>
+              <a href="#" class="hover-links secondary-button">Sign in</a>
+            </li>
+            <li><a href="#" class="hover-links primary-button">Sign up</a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- header seciton -->
     <header>
-        <div class="container header-section flex">
-            <div class="header-left">
-                <h1>Design Confidentaly</h1>
-                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button">Get Started</a>
-            </div>
-
-            <div class="header-right">
-                <img src="assets/asset 2.png" alt="">
-            </div>
+      <div class="container header-section flex">
+        <div class="header-left">
+          <h1>Design Confidentaly</h1>
+          <p>
+            UsabilityHub is a remote user research platform that takes the
+            guesswork out of design decisions by validating them with real
+            users.
+          </p>
+          <a href="#" class="primary-button">Get Started</a>
         </div>
+
+        <div class="header-right">
+          <img src="assets/asset 2.png" alt="" />
+        </div>
+      </div>
     </header>
 
     <section class="companies-section">
-       <div class="container">
+      <div class="container">
         <div class="small-bold-text companies-header">
-            The world’s best companies rely on UsabilityHub to make better design decisions.
+          The world’s best companies rely on UsabilityHub to make better design
+          decisions.
         </div>
 
         <div class="logos flex">
-            <img src="assets/asset 3.png" alt="" class="logo">
-            <img src="assets/asset 4.png" alt="" class="logo">
-            <img src="assets/asset 5.png" alt="" class="logo">
-            <img src="assets/asset 6.png" alt="" class="logo">
-            <img src="assets/asset 7.png" alt="" class="logo">
-            <img src="assets/asset 8.svg" alt="" class="logo">
-            <img src="assets/asset 9.png" alt="" class="logo">
+          <img src="assets/asset 3.png" alt="" class="logo" />
+          <img src="assets/asset 4.png" alt="" class="logo" />
+          <img src="assets/asset 5.png" alt="" class="logo" />
+          <img src="assets/asset 6.png" alt="" class="logo" />
+          <img src="assets/asset 7.png" alt="" class="logo" />
+          <img src="assets/asset 8.svg" alt="" class="logo" />
+          <img src="assets/asset 9.png" alt="" class="logo" />
         </div>
-       </div>
+      </div>
     </section>
 
-    <section class="features-section"></section>
+    <!-- features section -->
+
+    <section class="features-section">
+      <div class="container">
+        <div class="features-header">
+          <h2>Your user research Swiss Army knife</h2>
+          <a href="#" class="secondary-button"
+            >See all features <i class="fa-solid fa-right-long"></i></a>
+        </div>
+
+        <div class="features-area flex">
+            <div class="features-card">
+                <img src="assets/asset 11.svg" alt="">
+            </div>
+        </div>
+      </div>
+    </section>
 
     <section class="big-features-section"></section>
     <section class="big-features-section"></section>
@@ -82,6 +106,11 @@
 
     <div class="sub-footer"></div>
 
-    <script src="https://kit.fontawesome.com/fbc44e03f7.js" crossorigin="anonymous"></script>
-</body>
+    <div class="spacer" style="height: 100vw;"></div>
+
+    <script
+      src="https://kit.fontawesome.com/fbc44e03f7.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
