Example section done

--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -172,12 +172,42 @@
             <div class="features-desc flex">
                 <p>Easier decision making for</p>
                 <h2>Product managers</h2>
-                <p>Ensure you’re delivering the right features to the right customers by validating product concepts with your target audience.</p>
+                <p>Ensure you're delivering the right features to the right customers by validating product concepts with your target audience.</p>
             </div>
         </div>
     </section>
 
-    <section class="example-section"></section>
+    <!-- Example Section  -->
+
+    <section class="example-section">
+        
+        <div class="container">
+
+            <div class="example-header flex">
+                <h2>One platform, endless possibilities</h2>
+                <a href="#" class="secondary-button">See more examples <i class="fa-solid fa-right-long"></i></a>
+            </div>
+            
+            <div class="example-area flex">
+              <a href="#" class="example-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+              </a>
+
+              <a href="#" class="example-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+              </a>
+
+              <a href="#" class="example-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+              </a>
+
+              <a href="#" class="example-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+              </a>
+            </div>
+        </div>
+
+    </section>
 
     <section class="cta-section"></section>
 
