--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -194,22 +194,30 @@
               </a>
 
               <a href="#" class="example-card">
-                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+                <h3 class="card-text">Can users find important pages on my website?</h3>
               </a>
 
               <a href="#" class="example-card">
-                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+                <h3 class="card-text">Is my website's intended audience clear?</h3>
               </a>
 
               <a href="#" class="example-card">
-                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+                <h3 class="card-text">Do visitors understand what a page is about?</h3>
               </a>
             </div>
         </div>
 
     </section>
 
-    <section class="cta-section"></section>
+    <!-- CTA section -->
+
+    <section class="cta-section">
+      <div class="container flex cta-section-container">
+        <h2>Start testing today</h2>
+        <p>Take the guesswork out of design decisions</p>
+        <a href="#" class="primary-button">Get Started</a>
+      </div>
+    </section>
 
     <footer></footer>
 
