--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -219,7 +219,15 @@
       </div>
     </section>
 
-    <footer></footer>
+    <!-- footer section -->
+
+    <footer>
+      <div class="container flex footer-container">
+        <div class="footer-logo">
+          <img src="assets/asset 1.png" alt="">
+        </div>
+      </div>
+    </footer>
 
     <div class="sub-footer"></div>
 
