Hover Links added footer

--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -223,8 +223,32 @@
 
     <footer>
       <div class="container flex footer-container">
-        <div class="footer-logo">
-          <img src="assets/asset 1.png" alt="">
+        <a href="#" class="company-logo">
+          <img src="assets/asset 1.png" alt="company logo">
+        </a>
+
+        <div class="link-column">
+          <a href="#" class="hover-links">Overview</a>
+          <a href="#" class="hover-links">Pricing</a>
+          <a href="#" class="hover-links">Usability Hub</a>
+          <a href="#" class="hover-links">Customers Page</a>
+          <a href="#" class="hover-links">Status Page</a>
+        </div>
+
+        <div class="link-column">
+          <a href="#" class="hover-links">Overview</a>
+          <a href="#" class="hover-links">Pricing</a>
+          <a href="#" class="hover-links">Usability Hub</a>
+          <a href="#" class="hover-links">Customers Page</a>
+          <a href="#" class="hover-links">Status Page</a>
+        </div>
+
+        <div class="link-column">
+          <a href="#" class="hover-links">Overview</a>
+          <a href="#" class="hover-links">Pricing</a>
+          <a href="#" class="hover-links">Usability Hub</a>
+          <a href="#" class="hover-links">Customers Page</a>
+          <a href="#" class="hover-links">Status Page</a>
         </div>
       </div>
     </footer>
