Footer section Done

--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -227,7 +227,8 @@
           <img src="assets/asset 1.png" alt="company logo">
         </a>
 
-        <div class="link-column">
+        <div class="link-column flex">
+          <h4>Products</h4>
           <a href="#" class="hover-links">Overview</a>
           <a href="#" class="hover-links">Pricing</a>
           <a href="#" class="hover-links">Usability Hub</a>
@@ -235,20 +236,24 @@
           <a href="#" class="hover-links">Status Page</a>
         </div>
 
-        <div class="link-column">
-          <a href="#" class="hover-links">Overview</a>
-          <a href="#" class="hover-links">Pricing</a>
-          <a href="#" class="hover-links">Usability Hub</a>
-          <a href="#" class="hover-links">Customers Page</a>
-          <a href="#" class="hover-links">Status Page</a>
+        <div class="link-column flex">
+          <h4>Methodologies</h4>
+          <a href="#" class="hover-links">Card Sorting</a>
+          <a href="#" class="hover-links">Prototype Testing</a>
+          <a href="#" class="hover-links">First Click Tests</a>
+          <a href="#" class="hover-links">Preference Tests</a>
+          <a href="#" class="hover-links">Five Second Tests</a>
+          <a href="#" class="hover-links">Design Surveys</a>
         </div>
 
-        <div class="link-column">
-          <a href="#" class="hover-links">Overview</a>
-          <a href="#" class="hover-links">Pricing</a>
-          <a href="#" class="hover-links">Usability Hub</a>
-          <a href="#" class="hover-links">Customers Page</a>
-          <a href="#" class="hover-links">Status Page</a>
+        <div class="link-column flex">
+          <h4>Resources</h4>
+          <a href="#" class="hover-links">Blog</a>
+          <a href="#" class="hover-links">Examples</a>
+          <a href="#" class="hover-links">Testing Guides</a>
+          <a href="#" class="hover-links">Help Center</a>
+          <a href="#" class="hover-links">Contact</a>
+          <a href="#" class="hover-links">Careers</a>
         </div>
       </div>
     </footer>
