Sub-footer Completed

--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -258,9 +258,17 @@
       </div>
     </footer>
 
-    <div class="sub-footer"></div>
+    <div class="sub-footer">
+      <div class="container flex sub-footer-links">
+        <a href="#" class="hover-links">Privacy Policy</a>
+        <a href="#" class="hover-links">Terms & Condition</a>
+        <a href="#" class="hover-links">Security Information</a>
+        <a href="#" class="hover-links"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="hover-links"><i class="fa-brands fa-x-twitter"></i></a>
+      </div>
+    </div>
 
-    <div class="spacer" style="height: 100vw;"></div>
+    <!-- <div class="spacer" style="height: 100vw;"></div> -->
 
     <script
       src="https://kit.fontawesome.com/fbc44e03f7.js"
