--- a/4th Complete Landing Page/index.html
+++ b/4th Complete Landing Page/index.html
@@ -227,6 +227,8 @@
           <img src="assets/asset 1.png" alt="company logo">
         </a>
 
+        <!-- First section  -->
+
         <div class="link-column flex">
           <h4>Products</h4>
           <a href="#" class="hover-links">Overview</a>
@@ -235,6 +237,8 @@
           <a href="#" class="hover-links">Customers Page</a>
           <a href="#" class="hover-links">Status Page</a>
         </div>
+
+        <!-- second section  -->
 
         <div class="link-column flex">
           <h4>Methodologies</h4>
@@ -245,6 +249,8 @@
           <a href="#" class="hover-links">Five Second Tests</a>
           <a href="#" class="hover-links">Design Surveys</a>
         </div>
+
+        <!-- third section  -->
 
         <div class="link-column flex">
           <h4>Resources</h4>
@@ -257,6 +263,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- forth section  -->
 
     <div class="sub-footer">
       <div class="container flex sub-footer-links">
